Fix font size is too small for several items; change show status bar default to 'show'; fix NPPossessors page load failure; fix featureItems not working

--- a/src/org/sil/paws/resources/configuration/Styles/PAWSStarterKitMaster.css
+++ b/src/org/sil/paws/resources/configuration/Styles/PAWSStarterKitMaster.css
@@ -3,7 +3,7 @@
 BODY {
   font-family: sans-serif;
   color: navy;
-  font-size: x-small;
+  font-size: smaller;
   background-image: url(p12c08.gif);
 }
 
@@ -133,20 +133,20 @@ PRE {
   margin-left: .75in;
   margin-right: .75in;
   color: green;
-  font-size: x-small;
+  font-size: smaller;
 }
 
 .form .instruction {
   margin-left: .75in;
   margin-right: .75in;
   color: red;
-  font-size: x-small;
+  font-size: smaller;
 }
 
 
 .featureChart {
  color:#663300;
- font-size: x-small;
+ font-size: smaller;
 }
 
 .reviewer {
